New branch added - blur

--- a/home.html
+++ b/home.html
@@ -19,9 +19,21 @@
 
     <div class="slide1">
 
-      <img id="diamonds" class="diamonds">
-      <img id="insta" class="diamonds">
-      <img id="fb" class="diamonds">
+
+
+      
+
+      <span class="btn-span">
+        <button class="top-btn">PRESETS</button>
+        <button class="top-btn">CONTACT</button>
+      </span>
+      <!-- <button class="btn-dia"></button>
+      <button class="btn-dia"></button>
+      <button class="btn-dia"></button> -->
+
+      <img id="diamonds" class="diamonds" src="resources/icons/diamonds_main.svg">
+      <img id="insta" class="diamonds" src="resources/icons/diamonds_upper_insta_white.svg">
+      <img id="fb" class="diamonds" src="resources/icons/diamonds_lower_fb_white.svg">
 
       <a href="#slide2"><img class="downarrow" src="Resources/icons/arrow-down-sign-to-navigate.svg"> </a>
 
@@ -42,7 +54,7 @@
           <br>
 
       <div class="dabba" class="box2">
-        <a data-tilt data-tilt-glare="true" data-tilt-transition="true"  data-tilt-scale="1.1" class="c-logo" href=" " title="Tilt.js demo ">
+        <a data-tilt data-tilt-glare="true" data-tilt-transition="true"  data-tilt-scale="1.1" class="c-logo" href="grid.html" title="Tilt.js demo ">
           <span>Macro</span>
         </a> 
       </div> 
@@ -50,7 +62,7 @@
         <br>
 
       <div class="dabba" class="box3">
-        <a data-tilt data-tilt-glare="true" data-tilt-transition="true"  data-tilt-scale="1.1" class="c-logo" href=" " title="Tilt.js demo ">
+        <a data-tilt data-tilt-glare="true" data-tilt-transition="true"  data-tilt-scale="1.1" class="c-logo" href="grid.html" title="Tilt.js demo ">
           <span>Landscape</span>
         </a> 
       </div>
@@ -58,7 +70,7 @@
       <br>
       
       <div class="dabba" class="box4">
-        <a data-tilt data-tilt-glare="true" data-tilt-transition="true"  data-tilt-scale="1.1" class="c-logo" href=" " title="Tilt.js demo ">
+        <a data-tilt data-tilt-glare="true" data-tilt-transition="true"  data-tilt-scale="1.1" class="c-logo" href="grid.html" title="Tilt.js demo ">
           <span><img src="/Users/abhishekashyap/Documents/WT Project/images/Gardening.jpg" height="300px" width="300px"></span>
         </a> 
       </div>
