--- a/home.html
+++ b/home.html
@@ -21,90 +21,93 @@
 
 <body>
 
-  <div id="loading">
+  <!-- <div id="loading">
     <img id="loading-image" src="resources/icons/41-aperture.gif" alt="Loading..." />
+  </div> -->
+
+ 
+    <div class="slide1">
+
+      <span class="btn-span">
+        <button class="top-btn">PRESETS</button>
+        <button class="top-btn">CONTACT</button>
+      </span>
+
+
+      <div class="btn-container">
+
+        <button class="social fb"><span class="fa fa-facebook fa-3x inside"></span></button>
+
+        <button class="trap-logo">
+          <h2 class="inside">TRAPERTURE</h2>
+          <h6 class="inside">seize the aperture</h6>
+        </button>
+
+        <button class="social insta"><span class="fa fa-instagram fa-3x inside"></span></button>
+      </div>
+
+      <a href="#slide2"><span class="fa fa-angle-down fa-5x downarrow"></span></a>
+
+    </div>
+
+
+    <div id="slide2" class="slide2">
+
+      <!-- TILT CODE STARTS -->
+      <br>
+
+      <div class="dabba" class="box1">
+        <a data-tilt data-tilt-glare="true" data-tilt-transition="true" data-tilt-scale="1.1" class="c-logo" href=" "
+          title="Tilt.js demo ">
+          <span>Architecture</span>
+        </a>
+      </div>
+
+      <br>
+
+      <div class="dabba" class="box2">
+        <a data-tilt data-tilt-glare="true" data-tilt-transition="true" data-tilt-scale="1.1" class="c-logo" href="grid.html"
+          title="Tilt.js demo ">
+          <span>Macro</span>
+        </a>
+      </div>
+
+      <br>
+
+      <div class="dabba" class="box3">
+        <a data-tilt data-tilt-glare="true" data-tilt-transition="true" data-tilt-scale="1.1" class="c-logo" href="grid.html"
+          title="Tilt.js demo ">
+          <span>Landscape</span>
+        </a>
+      </div>
+
+      <br>
+
+      <div class="dabba" class="box4">
+        <a data-tilt data-tilt-glare="true" data-tilt-transition="true" data-tilt-scale="1.1" class="c-logo" href="grid.html"
+          title="Tilt.js demo ">
+          <span><img src="/Users/abhishekashyap/Documents/WT Project/images/Gardening.jpg" height="300px" width="300px"></span>
+        </a>
+      </div>
+
+    </div>
+
+    <!-- TILT CODE ENDS -->
+
   </div>
-
-  <div class="slide1">
-
-    <span class="btn-span">
-      <button class="top-btn">PRESETS</button>
-      <button class="top-btn">CONTACT</button>
-    </span>
-
-
-    <div class="btn-container">
-      <button class="social btn-dia face"><span class="fa fa-facebook fa-3x inside"></span></button>
-
-      <button class="trap-logo btn-dia">
-        <h2 class="inside">TRAPERTURE</h2>
-        <h6 class="inside">seize the aperture</h6>
-      </button>
-
-      <button class="social btn-dia insta"><span class="fa fa-instagram fa-3x inside"></span></button>
-    </div>
-
-    <a href="#slide2"><span class="fa-angle-down downarrow"></a>
-
-  </div>
-
-
-  <div id="slide2" class="slide2">
-
-    <!-- TILT CODE STARTS -->
-    <br>
-
-    <div class="dabba" class="box1">
-      <a data-tilt data-tilt-glare="true" data-tilt-transition="true" data-tilt-scale="1.1" class="c-logo" href=" "
-        title="Tilt.js demo ">
-        <span>Architecture</span>
-      </a>
-    </div>
-
-    <br>
-
-    <div class="dabba" class="box2">
-      <a data-tilt data-tilt-glare="true" data-tilt-transition="true" data-tilt-scale="1.1" class="c-logo" href="grid.html"
-        title="Tilt.js demo ">
-        <span>Macro</span>
-      </a>
-    </div>
-
-    <br>
-
-    <div class="dabba" class="box3">
-      <a data-tilt data-tilt-glare="true" data-tilt-transition="true" data-tilt-scale="1.1" class="c-logo" href="grid.html"
-        title="Tilt.js demo ">
-        <span>Landscape</span>
-      </a>
-    </div>
-
-    <br>
-
-    <div class="dabba" class="box4">
-      <a data-tilt data-tilt-glare="true" data-tilt-transition="true" data-tilt-scale="1.1" class="c-logo" href="grid.html"
-        title="Tilt.js demo ">
-        <span><img src="/Users/abhishekashyap/Documents/WT Project/images/Gardening.jpg" height="300px" width="300px"></span>
-      </a>
-    </div>
-
-  </div>
-
-  <!-- TILT CODE ENDS -->
-
-  </div>
+  
 
 
   <!--SCRIPTS-->
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
-    <script>
-        $(document).ready(function () {
-          $(window).load(function () {
-            $('#loading').hide();
-          });
-        });
-      </script>
+  <!-- <script>
+    $(document).ready(function () {
+      $(window).load(function () {
+        $('#loading').hide();
+      });
+    });
+  </script> -->
   <!-- <script src="js/home.js"></script> -->
   <!-- <script src="js/smoothscroll.js"></script> -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
