--- a/home.html
+++ b/home.html
@@ -21,9 +21,9 @@
 
 <body>
 
-  <!-- <div id="loading">
+  <div id="loading">
     <img id="loading-image" src="resources/icons/41-aperture.gif" alt="Loading..." />
-  </div> -->
+  </div>
 
  
     <div class="slide1">
@@ -101,14 +101,8 @@
   <!--SCRIPTS-->
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
-  <!-- <script>
-    $(document).ready(function () {
-      $(window).load(function () {
-        $('#loading').hide();
-      });
-    });
-  </script> -->
-  <!-- <script src="js/home.js"></script> -->
+  
+  <script src="js/home.js"></script>
   <!-- <script src="js/smoothscroll.js"></script> -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/130527/vanilla-tilt.min.js'></script>
